2007-10-28 Jesse Kornblum <research@jessekornblum.com>

	* Fixed definition of C_DIRECT in dcfldd.h from a duplicate
	  of C_TWOBUFS to its own unique value. This could cause a 
	  crash on some 64-bit platforms.
	

2007-09-28 Jesse Kornblum <research@jessekornblum.com>

	* Clarified help message and man page about 'd' suffixies. 

	
2007-09-26 Jesse Kornblum <research@jessekornblum.com>

	* Updated the include process in dcfldd.h to allow for
	  the proper use of the detected environment. Also added
	  AC_GNU_SOURCE, AC_SYS_LARGEFILE, and checks for time.h 
	  to the configure script. These eliminate some redundant
	  includes in dcfldd.h and make sure we've defined O_DIRECT
	  if it's available.
	

2007-09-23 Jesse Kornblum <research@jessekornblum.com>

	* Moved history of changes to NEWS file.
	